# remote-surveillance-system

./: CMakeLists.txt  README.md  custom.css  custom_dark_theme.css  doxyfile
include/: Camera.h  CameraSettings.h  PWMSongParser.h  SongParser.h  constants.h  helpers.h  morseMain.h  recordMain.h  streamMain.h  watchMain.h
src/: Camera.cpp  PWMSongParser.cpp  SongParser.cpp  helpers.cpp  main.cpp  morseMain.cpp  recordMain.cpp  streamMain.cpp  watchMain.cpp
